--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
                   <a class="nav-link active" aria-current="page" href="#">Home</a>
                 </li>
                 <li class="nav-item ms-lg-5 text-center">
-                  <a class="nav-link" href="#">Projects</a>
+                  <a class="nav-link" href="projects.html">Projects</a>
                 </li>
                 <li class="nav-item ms-lg-5 text-center">
-                  <a class="nav-link" href="#">Contact</a>
+                  <a class="nav-link" href="#">About</a>
                 </li>
               </ul>
             </div>
@@ -63,7 +63,7 @@
       </div>
       <div class="row">
         <div class="col text-center button-animate">
-          <button class="btn btn-dark mt-1 mb-4 shadow-none">View All Projects <i class="fa-solid fa-arrow-right-long"></i></button>
+          <a class="btn btn-dark mt-1 mb-4 shadow-none" href="/projects.html">View All Projects <i class="fa-solid fa-arrow-right-long"></i></a>
         </div>
       </div>
     </div>
@@ -94,8 +94,8 @@
     </div>
     <!-- Contact Section -->
     <div class="container">
-      <h2 class="h1-responsive font-weight-bold text-center mb-3">Contact us</h2>
-      <p class="text-center w-responsive mx-auto mb-5 d-none d-md-block">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas atque itaque ipsa provident odit corrupti.</p>
+      <h2 class="h1-responsive font-weight-bold text-center mb-lg-3">Contact us</h2>
+      <p class="text-center w-responsive mx-auto mb-4 d-none d-md-block">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas atque itaque ipsa provident odit corrupti.</p>
       <div class="row">
         <div class="col-md-9 mb-md-0 mb-5">
             <form id="contact-form" name="contact-form" action="mail.php" method="POST">
