Further work on Projects page

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       </div>
       <div class="row">
         <div class="col text-center button-animate">
-          <a class="btn btn-dark mt-1 mb-4 shadow-none" href="/projects.html">View All Projects <i class="fa-solid fa-arrow-right-long"></i></a>
+          <a class="btn btn-dark mt-1 mb-4 shadow-none" href="projects.html">View All Projects <i class="fa-solid fa-arrow-right-long"></i></a>
         </div>
       </div>
     </div>
