--- a/projects.html
+++ b/projects.html
@@ -10,7 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <!-- Stylesheet -->
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/x-icon" href="">
+    <link rel="icon" type="image/x-icon" href="img/logo-white.jpg">
     <meta name="description" content="">
     <title>Jessica King - Interior Design</title>
 </head>
@@ -18,8 +18,10 @@
     <!-- Nav Bar -->
     <div class="container-fluid">
         <nav class="navbar navbar-expand-lg navbar-light fixed-top">
-          <div class="container py-3">
-            <a class="navbar-brand" href="#">Logo/Title</a>
+          <div class="container py-1">
+            <a class="navbar-brand" href="#">
+                <img src="img/logo-white.jpg" height="100px" class="main-logo" alt="">
+            </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
