--- a/projects.html
+++ b/projects.html
@@ -19,7 +19,7 @@
     <div class="container-fluid">
         <nav class="navbar navbar-expand-lg navbar-light fixed-top">
           <div class="container py-1">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="index.html">
                 <img src="img/logo-white.jpg" height="100px" class="main-logo" alt="">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
