Added About Page

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/x-icon" href="img/logo-white.jpg">
     <meta name="description" content="">
-    <title>Jessica King - Interior Design</title>
+    <title>JNK Spaces - Interior Design</title>
 </head>
 <body>
     <!-- Nav Bar -->
@@ -34,7 +34,7 @@
                   <a class="nav-link" href="projects.html">Projects</a>
                 </li>
                 <li class="nav-item ms-lg-5 text-center">
-                  <a class="nav-link" href="#">About</a>
+                  <a class="nav-link" href="about.html">About</a>
                 </li>
               </ul>
             </div>
