--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/x-icon" href="img/logo-white.jpg">
     <meta name="description" content="">
-    <title>JNK Spaces - Projects</title>
+    <title>JNK Spaces - About</title>
 </head>
 <body>
     <!-- Nav Bar -->
@@ -31,63 +31,39 @@
                   <a class="nav-link" aria-current="page" href="index.html">Home</a>
                 </li>
                 <li class="nav-item ms-lg-5 text-center">
-                  <a class="nav-link active" href="#">Projects</a>
+                  <a class="nav-link" href="projects.html">Projects</a>
                 </li>
                 <li class="nav-item ms-lg-5 text-center">
-                  <a class="nav-link" href="about.html">About</a>
+                  <a class="nav-link active" href="#">About</a>
                 </li>
               </ul>
             </div>
           </div>
         </nav>
     </div>
-    <!-- Projects -->
-    <div class="container">
+    <!-- Info Section -->
+    <div class="container pb-4">
         <div class="row">
-            <div class="project-1 col-lg-6">
-                <div class="wrapper2">
-                    <img src="img/roberto-nickson-tleCJiDOri0-unsplash.jpg" alt="" class="img-fluid pb-lg-4">
-                    <div class="overlay d-none d-lg-block">
-                    <h2 class="pb-3">Test Title</h2>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempora, quasi temporibus? Dolor natus dolorum in molestias sint, consequatur tenetur ratione?</p>
-                    </div>
-                </div>
-                <p class="pt-3 pt-lg-1 d-lg-none text-center">Project 1 Name</p>
+            <div class="col-12 col-lg-5">
+                <img src="img/noah-buscher-vsBkQ0Lc3zs-unsplash.jpg" class="img-fluid">
             </div>
-            <div class="project-2 col-lg-6">
-                <div class="wrapper2">
-                    <img src="img/r-architecture-oGmf8o53LeE-unsplash.jpg" alt="" class="img-fluid pb-lg-4">
-                    <div class="overlay d-none d-lg-block">
-                    <h2 class="pb-3">Test Title</h2>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempora, quasi temporibus? Dolor natus dolorum in molestias sint, consequatur tenetur ratione?</p>
-                    </div>
+            <div class="col-12 col-lg-7 p-3">
+                <h4 class="text-center pb-2">Test Title</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor obcaecati id enim, minima ex, laboriosam facere velit non at harum dolore pariatur odit temporibus dicta consequatur rem provident vitae tenetur?</p>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aspernatur voluptatem sed error saepe dignissimos inventore doloremque, maiores fugiat consectetur nulla mollitia obcaecati dicta accusantium ut iste et molestiae dolore quod! Delectus minus fugiat accusantium. Vitae id magnam sint quo delectus!</p>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus at obcaecati voluptas totam quis inventore! Eos at provident autem ad! Vitae, quaerat eos quasi libero possimus quisquam suscipit adipisci nesciunt?</p>
+                <div class="text-center d-none d-xl-block">
+                    <h4 class="p-2">Test Title</h4>
+                    <ul id="info-bullets" class="list-unstyled">
+                        <li class="bullet1">List information 1</li>
+                        <li class="bullet2 pb-3">List information 2</li>
+                        <li class="bullet3">List information 3</li>
+                        <li class="bullet4">List information 4</li>
+                    </ul>
                 </div>
-                <p class="pt-3 pt-lg-1 d-lg-none text-center">Project 2 Name</p>
             </div>
         </div>
-        <div class="row">
-            <div class="project-3 col-lg-6">
-                <div class="wrapper2">
-                    <img src="img/r-architecture-TRCJ-87Yoh0-unsplash.jpg" alt="" class="img-fluid pb-lg-4">
-                    <div class="overlay d-none d-lg-block">
-                    <h2 class="pb-3">Test Title</h2>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempora, quasi temporibus? Dolor natus dolorum in molestias sint, consequatur tenetur ratione?</p>
-                    </div>
-                </div>
-                <p class="pt-3 pt-lg-1 d-lg-none text-center">Project 3 Name</p>
-            </div>
-            <div class="project-4 col-lg-6">
-                <div class="wrapper2">
-                    <img src="img/r-architecture-wDDfbanbhl8-unsplash.jpg" alt="" class="img-fluid pb-lg-4">
-                    <div class="overlay d-none d-lg-block">
-                    <h2 class="pb-3">Test Title</h2>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempora, quasi temporibus? Dolor natus dolorum in molestias sint, consequatur tenetur ratione?</p>
-                    </div>
-                </div>
-                <p class="pt-3 pt-lg-1 d-lg-none text-center">Project 4 Name</p>
-            </div>
-        </div>
-    </div> 
+    </div>
     <!-- Contact Section -->
     <div class="container">
         <h2 class="h1-responsive font-weight-bold text-center mb-lg-3">Contact us</h2>
