Improved margins/padding on About page

--- a/about.html
+++ b/about.html
@@ -42,10 +42,10 @@
         </nav>
     </div>
     <!-- Info Section -->
-    <div class="container pb-4">
+    <div class="container">
         <div class="row">
             <div class="col-12 col-lg-5">
-                <img src="img/noah-buscher-vsBkQ0Lc3zs-unsplash.jpg" class="img-fluid">
+                <img src="img/noah-buscher-vsBkQ0Lc3zs-unsplash.jpg" class="img-fluid pb-lg-4">
             </div>
             <div class="col-12 col-lg-7 p-3">
                 <h4 class="text-center pb-2">Test Title</h4>
