Further improved margins and padding on About page

--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
             <div class="col-12 col-lg-5">
                 <img src="img/noah-buscher-vsBkQ0Lc3zs-unsplash.jpg" class="img-fluid pb-lg-4">
             </div>
-            <div class="col-12 col-lg-7 p-3">
+            <div class="col-12 col-lg-7 ps-3 pt-3 pe-3 pb-1">
                 <h4 class="text-center pb-2">Test Title</h4>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor obcaecati id enim, minima ex, laboriosam facere velit non at harum dolore pariatur odit temporibus dicta consequatur rem provident vitae tenetur?</p>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aspernatur voluptatem sed error saepe dignissimos inventore doloremque, maiores fugiat consectetur nulla mollitia obcaecati dicta accusantium ut iste et molestiae dolore quod! Delectus minus fugiat accusantium. Vitae id magnam sint quo delectus!</p>
@@ -56,7 +56,7 @@
                     <h4 class="p-2">Test Title</h4>
                     <ul id="info-bullets" class="list-unstyled">
                         <li class="bullet1">List information 1</li>
-                        <li class="bullet2 pb-3">List information 2</li>
+                        <li class="bullet2 pb-lg-3">List information 2</li>
                         <li class="bullet3">List information 3</li>
                         <li class="bullet4">List information 4</li>
                     </ul>
