Replaced filler Lorem text with actual verbiage.

--- a/about.html
+++ b/about.html
@@ -48,17 +48,17 @@
                 <img src="img/noah-buscher-vsBkQ0Lc3zs-unsplash.jpg" class="img-fluid pb-lg-4">
             </div>
             <div class="col-12 col-lg-7 ps-3 pt-3 pe-3 pb-1">
-                <h4 class="text-center pb-2">Test Title</h4>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor obcaecati id enim, minima ex, laboriosam facere velit non at harum dolore pariatur odit temporibus dicta consequatur rem provident vitae tenetur?</p>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aspernatur voluptatem sed error saepe dignissimos inventore doloremque, maiores fugiat consectetur nulla mollitia obcaecati dicta accusantium ut iste et molestiae dolore quod! Delectus minus fugiat accusantium. Vitae id magnam sint quo delectus!</p>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus at obcaecati voluptas totam quis inventore! Eos at provident autem ad! Vitae, quaerat eos quasi libero possimus quisquam suscipit adipisci nesciunt?</p>
+                <h4 class="text-center pb-2">JNK Spaces</h4>
+                <p><em>Philosophy</em> - We believe the spaces we occupy influence our overall well-being and when we are surrounded by beauty our experiences are richer. Where the real magic happens is when we combine beauty and function to create the ideal backdrop to the meaningful memories in our lives.</p>
+                <p><em>Process</em> - All of our projects are thoughtfully designed with both people and space in mind. From start to finish, we collaborate with our clients to design spaces based on how they want to feel, as well as what they need to accomplish, while in them. Whether the space needs to inspire creativity, promote play, or cultivate calm, we will work closely with them to develop a functional design that achieves that feeling and enhances their quality of life.</p>
+                <p><em>Promise</em> - We promise to always deliver quality in our designs and interactions. We take the time to get to know our clients and create authentic relationships, combining their vision with our expertise to deliver elevated designs.</p>
                 <div class="text-center d-none d-xl-block">
-                    <h4 class="p-2">Test Title</h4>
+                    <h4 class="p-2">Design Styles</h4>
                     <ul id="info-bullets" class="list-unstyled">
-                        <li class="bullet1">List information 1</li>
-                        <li class="bullet2 pb-lg-3">List information 2</li>
-                        <li class="bullet3">List information 3</li>
-                        <li class="bullet4">List information 4</li>
+                        <li class="bullet1">Vintage</li>
+                        <li class="bullet2 pb-lg-3">Modern</li>
+                        <li class="bullet3">Mediterranean</li>
+                        <li class="bullet4">Scandinavian</li>
                     </ul>
                 </div>
             </div>
@@ -67,7 +67,7 @@
     <!-- Contact Section -->
     <div class="container">
         <h2 class="h1-responsive font-weight-bold text-center mb-lg-3">Contact us</h2>
-        <p class="text-center w-responsive mx-auto mb-4 d-none d-md-block">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas atque itaque ipsa provident odit corrupti.</p>
+        <p class="text-center w-responsive mx-auto mb-4 d-none d-md-block">For project inquiries, fill out the form below. We look forward to hearing from you!</p>
         <div class="row">
           <div class="col-md-9 mb-md-0 mb-5">
               <form id="contact-form" name="contact-form" action="mail.php" method="POST">
