--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
           <div class="wrapper">
             <img src="img/spacejoy-PyeXkOVmG1Y-unsplash.jpg" alt="" class="img-fluid pb-2">
             <div class="overlay d-none d-lg-block">
-              <h2 class="pb-3">Test Title</h2>
-              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempora, quasi temporibus? Dolor natus dolorum in molestias sint, consequatur tenetur ratione?</p>
+              <h2 class="pb-3">About JNK Spaces</h2>
+              <p>We believe the spaces we occupy influence our overall well-being and when we are surrounded by beauty our experiences are richer. All of our projects are thoughtfully designed with both people and space in mind.</p>
             </div>
           </div>
         </div>        
@@ -59,8 +59,8 @@
     <div class="container">
       <div class="row">
         <div class="col text-center pt-3">
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, beatae iste? Consectetur voluptatum veritatis quasi?</p>
-          <p class="d-none d-md-block">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed at nisi fugit laboriosam unde nihil recusandae veritatis, quia maiores magnam?</p>
+          <p>At JNK Spaces, we believe the spaces we occupy impact our overall well-being.</p>
+          <p class="d-none d-md-block">Our goal is to combine beauty and function to help you create magical moments within the ordinary ones.</p>
         </div>
       </div>
       <div class="row">
@@ -76,28 +76,28 @@
           <div class="wrapper2">
             <img src="img/roberto-nickson-tleCJiDOri0-unsplash.jpg" alt="" class="img-fluid pb-2">
             <div class="overlay d-none d-lg-block">
-              <h2 class="pb-3">Test Title</h2>
-              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempora, quasi temporibus? Dolor natus dolorum in molestias sint, consequatur tenetur ratione?</p>
+              <h2 class="pb-3">Featured Project - Residential</h2>
+              <p>The Oceanside Condo has clean, modern architecture and design with stunning ocean views.</p>
             </div>
           </div>
-          <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, beatae iste? Consectetur voluptatum veritatis quasi?</p>
+          <p class="text-center">Our residential projects are thoughtfully designed to elevate the space you occupy by creating a beautiful backdrop for your everyday life.</p>
         </div>
         <div class="col-12 col-sm-6">
           <div class="wrapper2">
-            <img src="img/r-architecture-wDDfbanbhl8-unsplash.jpg" alt="" class="img-fluid pb-2">
+            <img src="img/r-architecture-oGmf8o53LeE-unsplash.jpg" alt="" class="img-fluid pb-2">
             <div class="overlay d-none d-lg-block">
-              <h2 class="pb-3">Test Title</h2>
-              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempora, quasi temporibus? Dolor natus dolorum in molestias sint, consequatur tenetur ratione?</p>
+              <h2 class="pb-3">Featured Project - Commercial</h2>
+              <p>The Southwestern Retreat is a modern vacation rental in the heart of the southwestern U.S.</p>
             </div>
           </div>
-          <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, beatae iste? Consectetur voluptatum veritatis quasi?</p>
+          <p class="text-center">In our commercial projects, form meets function to inspire your best creative work and bring your entrepreneurial vision to life.</p>
         </div>
       </div>
     </div>
     <!-- Contact Section -->
     <div class="container">
       <h2 class="h1-responsive font-weight-bold text-center mb-lg-3">Contact us</h2>
-      <p class="text-center w-responsive mx-auto mb-4 d-none d-md-block">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas atque itaque ipsa provident odit corrupti.</p>
+      <p class="text-center w-responsive mx-auto mb-4 d-none d-md-block">For project inquiries, fill out the form below. We look forward to hearing from you!</p>
       <div class="row">
         <div class="col-md-9 mb-md-0 mb-5">
             <form id="contact-form" name="contact-form" action="mail.php" method="POST">
