--- a/projects.html
+++ b/projects.html
@@ -48,21 +48,21 @@
                 <div class="wrapper2">
                     <img src="img/roberto-nickson-tleCJiDOri0-unsplash.jpg" alt="" class="img-fluid pb-lg-4">
                     <div class="overlay d-none d-lg-block">
-                    <h2 class="pb-3">Test Title</h2>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempora, quasi temporibus? Dolor natus dolorum in molestias sint, consequatur tenetur ratione?</p>
+                    <h2 class="pb-3">Oceanside Condo</h2>
+                    <p>Clean, modern architecture and design with stunning ocean views.</p>
                     </div>
                 </div>
-                <p class="pt-3 pt-lg-1 d-lg-none text-center">Project 1 Name</p>
+                <p class="pt-3 pt-lg-1 d-lg-none text-center">Oceanside Condo</p>
             </div>
             <div class="project-2 col-lg-6">
                 <div class="wrapper2">
                     <img src="img/r-architecture-oGmf8o53LeE-unsplash.jpg" alt="" class="img-fluid pb-lg-4">
                     <div class="overlay d-none d-lg-block">
-                    <h2 class="pb-3">Test Title</h2>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempora, quasi temporibus? Dolor natus dolorum in molestias sint, consequatur tenetur ratione?</p>
+                    <h2 class="pb-3">Southwestern Retreat</h2>
+                    <p>Modern vacation rental in the heart of the southwestern U.S.</p>
                     </div>
                 </div>
-                <p class="pt-3 pt-lg-1 d-lg-none text-center">Project 2 Name</p>
+                <p class="pt-3 pt-lg-1 d-lg-none text-center">Southwestern Retreat</p>
             </div>
         </div>
         <div class="row">
@@ -70,28 +70,28 @@
                 <div class="wrapper2">
                     <img src="img/r-architecture-TRCJ-87Yoh0-unsplash.jpg" alt="" class="img-fluid pb-lg-4">
                     <div class="overlay d-none d-lg-block">
-                    <h2 class="pb-3">Test Title</h2>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempora, quasi temporibus? Dolor natus dolorum in molestias sint, consequatur tenetur ratione?</p>
+                    <h2 class="pb-3">Coastal Kitchen</h2>
+                    <p>Tranquil kitchen with crisp white and natural elements.</p>
                     </div>
                 </div>
-                <p class="pt-3 pt-lg-1 d-lg-none text-center">Project 3 Name</p>
+                <p class="pt-3 pt-lg-1 d-lg-none text-center">Coastal Kitchen</p>
             </div>
             <div class="project-4 col-lg-6">
                 <div class="wrapper2">
                     <img src="img/r-architecture-wDDfbanbhl8-unsplash.jpg" alt="" class="img-fluid pb-lg-4">
                     <div class="overlay d-none d-lg-block">
-                    <h2 class="pb-3">Test Title</h2>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempora, quasi temporibus? Dolor natus dolorum in molestias sint, consequatur tenetur ratione?</p>
+                    <h2 class="pb-3">City Escape</h2>
+                    <p>Spacious, modern penthouse rental in downtown Austin, TX.</p>
                     </div>
                 </div>
-                <p class="pt-3 pt-lg-1 d-lg-none text-center">Project 4 Name</p>
+                <p class="pt-3 pt-lg-1 d-lg-none text-center">City Escape</p>
             </div>
         </div>
     </div> 
     <!-- Contact Section -->
     <div class="container">
         <h2 class="h1-responsive font-weight-bold text-center mb-lg-3">Contact us</h2>
-        <p class="text-center w-responsive mx-auto mb-4 d-none d-md-block">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas atque itaque ipsa provident odit corrupti.</p>
+        <p class="text-center w-responsive mx-auto mb-4 d-none d-md-block">For project inquiries, fill out the form below. We look forward to hearing from you!</p>
         <div class="row">
           <div class="col-md-9 mb-md-0 mb-5">
               <form id="contact-form" name="contact-form" action="mail.php" method="POST">
