Improvements for small device view

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <div class="row">
         <div class="col text-center pt-3">
           <p>At JNK Spaces, we believe the spaces we occupy impact our overall well-being.</p>
-          <p class="d-none d-md-block">Our goal is to combine beauty and function to help you create magical moments within the ordinary ones.</p>
+          <p>Our goal is to combine beauty and function to help you create magical moments within the ordinary ones.</p>
         </div>
       </div>
       <div class="row">
