Color scheme update

--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <!-- Stylesheet -->
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/x-icon" href="img/logo-white.jpg">
+    <link rel="icon" type="image/x-icon" href="img/JNKlogo.jpg">
     <meta name="description" content="">
     <title>JNK Spaces - About</title>
 </head>
@@ -20,7 +20,7 @@
         <nav class="navbar navbar-expand-lg navbar-light fixed-top">
           <div class="container py-1">
             <a class="navbar-brand" href="index.html">
-                <img src="img/logo-white.jpg" height="100px" class="main-logo" alt="">
+                <img src="img/JNKlogo.jpg" height="100px" class="main-logo" alt="JNK Logo">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -49,9 +49,9 @@
             </div>
             <div class="col-12 col-lg-7 ps-3 pt-3 pe-3 pb-1">
                 <h4 class="text-center pb-2">JNK Spaces</h4>
-                <p><em>Philosophy</em> - We believe the spaces we occupy influence our overall well-being and when we are surrounded by beauty our experiences are richer. Where the real magic happens is when we combine beauty and function to create the ideal backdrop to the meaningful memories in our lives.</p>
-                <p><em>Process</em> - All of our projects are thoughtfully designed with both people and space in mind. From start to finish, we collaborate with our clients to design spaces based on how they want to feel, as well as what they need to accomplish, while in them. Whether the space needs to inspire creativity, promote play, or cultivate calm, we will work closely with them to develop a functional design that achieves that feeling and enhances their quality of life.</p>
-                <p><em>Promise</em> - We promise to always deliver quality in our designs and interactions. We take the time to get to know our clients and create authentic relationships, combining their vision with our expertise to deliver elevated designs.</p>
+                <p><em class="about-first">Philosophy</em> - We believe the spaces we occupy influence our overall well-being and when we are surrounded by beauty our experiences are richer. Where the real magic happens is when we combine beauty and function to create the ideal backdrop to the meaningful memories in our lives.</p>
+                <p><em class="about-first">Process</em> - All of our projects are thoughtfully designed with both people and space in mind. From start to finish, we collaborate with our clients to design spaces based on how they want to feel, as well as what they need to accomplish, while in them. Whether the space needs to inspire creativity, promote play, or cultivate calm, we will work closely with them to develop a functional design that achieves that feeling and enhances their quality of life.</p>
+                <p><em class="about-first">Promise</em> - We promise to always deliver quality in our designs and interactions. We take the time to get to know our clients and create authentic relationships, combining their vision with our expertise to deliver elevated designs.</p>
                 <div class="text-center d-none d-xl-block">
                     <h4 class="p-2">Design Styles</h4>
                     <ul id="info-bullets" class="list-unstyled">
@@ -108,7 +108,7 @@
               <div class="row">
               <div class="col-1"></div>
               <div class="col-12 col-md-10 text-center text-md-start button-animate">
-                  <a class="btn btn-dark">Send Message <i class="fa-solid fa-arrow-right-long"></i></a>
+                <a class="btn btn-green">Send Message <i class="fa-solid fa-arrow-right-long arrow-white"></i></a>
               </div>
               <div class="status"></div>
             </div>
@@ -129,12 +129,11 @@
     <footer class="m-md-4 text-center">
         <div class="container button-animate">
             <p class="lead">Copyright © 2022 - All Rights Reserved </p> 
-            <a href="#" class="btn shadow-none mb-3">
-              <i class="fa-solid fa-circle-chevron-up" id="back-to-top"></i>
-          </a>
+            <a href="#" class="btn shadow-none mb-3" id="back-to-top">
+                <i class="fa-solid fa-circle-chevron-up"></i>
+            </a>
         </div>
     </footer>
-  
     <!-- Bootstrap JS Bundle -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
