--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <!-- Stylesheet -->
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/x-icon" href="img/logo-white.jpg">
+    <link rel="icon" type="image/x-icon" href="img/JNKlogo.jpg">
     <meta name="description" content="">
     <title>JNK Spaces - Interior Design</title>
 </head>
@@ -20,7 +20,7 @@
         <nav class="navbar navbar-expand-lg navbar-light fixed-top">
           <div class="container py-1">
             <a class="navbar-brand" href="#">
-                <img src="img/logo-white.jpg" height="100px" class="main-logo" alt="">
+                <img src="img/JNKlogo.jpg" height="100px" class="main-logo" alt="JNK Logo">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -59,13 +59,12 @@
     <div class="container">
       <div class="row">
         <div class="col text-center pt-3">
-          <p>At JNK Spaces, we believe the spaces we occupy impact our overall well-being.</p>
           <p>Our goal is to combine beauty and function to help you create magical moments within the ordinary ones.</p>
         </div>
       </div>
       <div class="row">
         <div class="col text-center button-animate">
-          <a class="btn btn-dark mt-1 mb-4 shadow-none" href="projects.html">View All Projects <i class="fa-solid fa-arrow-right-long"></i></a>
+          <a class="btn btn-green mt-1 mb-4 shadow-none" href="projects.html">View All Projects <i class="fa-solid fa-arrow-right-long arrow-white"></i></a>
         </div>
       </div>
     </div>
@@ -138,7 +137,7 @@
             <div class="row">
             <div class="col-1"></div>
             <div class="col-12 col-md-10 text-center text-md-start button-animate">
-                <a class="btn btn-dark">Send Message <i class="fa-solid fa-arrow-right-long"></i></a>
+                <a class="btn btn-green">Send Message <i class="fa-solid fa-arrow-right-long arrow-white"></i></a>
             </div>
             <div class="status"></div>
           </div>
@@ -159,12 +158,11 @@
     <footer class="m-md-4 text-center">
       <div class="container button-animate">
           <p class="lead">Copyright © 2022 - All Rights Reserved </p> 
-          <a href="#" class="btn shadow-none mb-3">
-            <i class="fa-solid fa-circle-chevron-up" id="back-to-top"></i>
-        </a>
+          <a href="#" class="btn shadow-none mb-3" id="back-to-top">
+            <i class="fa-solid fa-circle-chevron-up"></i>
+          </a>
       </div>
     </footer>
-
     <!-- Bootstrap JS Bundle -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
