Color scheme edits

--- a/index.html
+++ b/index.html
@@ -48,8 +48,10 @@
           <div class="wrapper">
             <img src="img/spacejoy-PyeXkOVmG1Y-unsplash.jpg" alt="" class="img-fluid pb-2">
             <div class="overlay d-none d-lg-block">
-              <h2 class="pb-3">About JNK Spaces</h2>
-              <p>We believe the spaces we occupy influence our overall well-being and when we are surrounded by beauty our experiences are richer. All of our projects are thoughtfully designed with both people and space in mind.</p>
+              <a href="about.html" class="unstyled">
+                <h2 class="pb-3">About JNK Spaces</h2>
+                <p>We believe the spaces we occupy influence our overall well-being and when we are surrounded by beauty our experiences are richer. All of our projects are thoughtfully designed with both people and space in mind.</p>
+              </a> 
             </div>
           </div>
         </div>        
