Additional projects info

--- a/projects.html
+++ b/projects.html
@@ -49,20 +49,20 @@
                     <img src="img/roberto-nickson-tleCJiDOri0-unsplash.jpg" alt="" class="img-fluid pb-lg-4">
                     <div class="overlay d-none d-lg-block">
                     <h2 class="pb-3">Oceanside Condo</h2>
-                    <p>Clean, modern architecture and design with stunning ocean views.</p>
+                    <p>Clean, modern architecture and design with stunning ocean views in Newport Beach, CA.</p>
                     </div>
                 </div>
-                <p class="pt-3 pt-lg-1 d-lg-none text-center">Oceanside Condo</p>
+                <p class="pt-3 pt-lg-1 d-lg-none text-center">Oceanside Condo - Newport Beach, CA</p>
             </div>
             <div class="project-2 col-lg-6">
                 <div class="wrapper2">
                     <img src="img/r-architecture-oGmf8o53LeE-unsplash.jpg" alt="" class="img-fluid pb-lg-4">
                     <div class="overlay d-none d-lg-block">
                     <h2 class="pb-3">Southwestern Retreat</h2>
-                    <p>Modern vacation rental in the heart of the southwestern U.S.</p>
+                    <p>Modern vacation rental in the heart of the southwestern U.S. (Scottsdale, AZ).</p>
                     </div>
                 </div>
-                <p class="pt-3 pt-lg-1 d-lg-none text-center">Southwestern Retreat</p>
+                <p class="pt-3 pt-lg-1 d-lg-none text-center">Southwestern Retreat - Scottsdale, AZ</p>
             </div>
         </div>
         <div class="row">
@@ -71,10 +71,10 @@
                     <img src="img/r-architecture-TRCJ-87Yoh0-unsplash.jpg" alt="" class="img-fluid pb-lg-4">
                     <div class="overlay d-none d-lg-block">
                     <h2 class="pb-3">Coastal Kitchen</h2>
-                    <p>Tranquil kitchen with crisp white and natural elements.</p>
+                    <p>Tranquil kitchen with crisp white and natural elements in San Diego, CA.</p>
                     </div>
                 </div>
-                <p class="pt-3 pt-lg-1 d-lg-none text-center">Coastal Kitchen</p>
+                <p class="pt-3 pt-lg-1 d-lg-none text-center">Coastal Kitchen - San Diego, CA</p>
             </div>
             <div class="project-4 col-lg-6">
                 <div class="wrapper2">
@@ -84,7 +84,7 @@
                     <p>Spacious, modern penthouse rental in downtown Austin, TX.</p>
                     </div>
                 </div>
-                <p class="pt-3 pt-lg-1 d-lg-none text-center">City Escape</p>
+                <p class="pt-3 pt-lg-1 d-lg-none text-center">City Escape - Austin, TX</p>
             </div>
         </div>
     </div> 
