Updated contact forms

--- a/projects.html
+++ b/projects.html
@@ -132,7 +132,7 @@
               <div class="row">
               <div class="col-1"></div>
               <div class="col-12 col-md-10 text-center text-md-start button-animate">
-                <a class="btn btn-green">Send Message <i class="fa-solid fa-arrow-right-long arrow-white"></i></a>
+                <a class="btn btn-green" href="#">Send Message <i class="fa-solid fa-arrow-right-long arrow-white"></i></a>
               </div>
               <div class="status"></div>
             </div>
