--- a/projects.html
+++ b/projects.html
@@ -49,7 +49,7 @@
                     <img src="img/roberto-nickson-tleCJiDOri0-unsplash.jpg" alt="" class="img-fluid pb-lg-4">
                     <div class="overlay d-none d-lg-block">
                     <h2 class="pb-3">Oceanside Condo</h2>
-                    <p>Clean, modern architecture and design with stunning ocean views in Newport Beach, CA.</p>
+                    <p>Clean, modern architecture and design with stunning ocean views on the Pacific coast.</p>
                     </div>
                 </div>
                 <p class="pt-3 pt-lg-1 d-lg-none text-center">Oceanside Condo - Newport Beach, CA</p>
@@ -59,7 +59,7 @@
                     <img src="img/r-architecture-oGmf8o53LeE-unsplash.jpg" alt="" class="img-fluid pb-lg-4">
                     <div class="overlay d-none d-lg-block">
                     <h2 class="pb-3">Southwestern Retreat</h2>
-                    <p>Modern vacation rental in the heart of the southwestern U.S. (Scottsdale, AZ).</p>
+                    <p>Modern vacation rental in the heart of the southwestern U.S.</p>
                     </div>
                 </div>
                 <p class="pt-3 pt-lg-1 d-lg-none text-center">Southwestern Retreat - Scottsdale, AZ</p>
