Added meta descriptions

--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
     <!-- Stylesheet -->
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/x-icon" href="img/JNKlogo.jpg">
-    <meta name="description" content="">
+    <meta name="description" content="About JNK Spaces - Our philosophy, process, and promise.">
     <title>JNK Spaces - About</title>
 </head>
 <body>
