--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Stylesheet -->
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/x-icon" href="img/JNKlogo.jpg">
-    <meta name="description" content="">
+    <meta name="description" content="Jessica King is an interior design based in Arizona, specializing in vintage, modern, Mediterranean, and Scandinavian inspired designs.">
     <title>JNK Spaces - Interior Design</title>
 </head>
 <body>
