--- a/projects.html
+++ b/projects.html
@@ -11,7 +11,7 @@
     <!-- Stylesheet -->
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/x-icon" href="img/JNKlogo.jpg">
-    <meta name="description" content="">
+    <meta name="description" content="Featured residential and commercial interior design projects at JNK Spaces.">
     <title>JNK Spaces - Projects</title>
 </head>
 <body>
